<resources>
    <string name="app_name">TranslateReminder</string>

    <string name="loading_data">Loading data</string>
    <string name="please_wait">Please wait</string>

    <string name="action_import">Import</string>
    <string name="nav_settings">Settings</string>
    <string name="menu_add_translations">Add entities</string>
    <string name="menu_word_edit">Edit translations</string>
    <string name="menu_learning">Learning</string>
    <string name="menu_settings">Settings</string>
    <string name="about_app">About</string>
    <string name="contact_developer">Contact developer</string>
    <string name="german_word">German word</string>
    <string name="entity">Translation</string>
    <string name="add">Add</string>
    <string name="add_translation">Add entity</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="empty_text">Please enter text</string>
    <string name="german_word_already_added">This word already exists</string>
    <string name="translation_already_added">This translation already exists</string>
    <string name="entities_title">Current words</string>
    <string name="others">Others</string>
    <string name="click_for_more_options">More options</string>
    <string name="search_hint">Type to filter items..</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_cannot_restore_data">Once deleted, you cannot restore the data</string>
    <string name="save">Save</string>
    <string name="edit_item">Edit entity</string>
    <string name="action_export">Export</string>
    <string name="select_file_to_save">Select a target to save the file</string>
    <string name="exported">Exported</string>
    <string name="deleted">Deleted</string>
    <string name="usb_error">Something went wrong. Try again later</string>
    <string name="grant_permission">Grant permission</string>
    <string name="missing_permission">Missing permission</string>
    <string name="please_grant_permission">The app requires storage permission in order to save the exported data.</string>

    <string name="title_activity_learning">LearningActivity</string>
    <string name="type_german">German Text</string>
    <string name="incorrect_answer_title">This is not correct</string>
    <string name="incorrect_answer_message">You answered: \"%1$s\". \n Correct answer was: \"%2$s\"</string>
    <string name="ok">OK</string>
    <string name="learn_new_words">Learn new words</string>
    <string name="menu_review">Review</string>
    <string name="menu_mistakes">Wrong</string>
    <string name="mistake">Wrong</string>
    <string name="item_details">Item details</string>
    <string name="translation">Translation</string>
    <string name="state">State:</string>
    <string name="date_added">Added:</string>
    <string name="next_review">Next review:</string>
    <string name="review_count">%d reviews</string>
    <string name="accuracy">Accuracy %d \%%</string>
    <string name="unknown">Unknown</string>
    <string name="less_then_a_minute_ago">less than a minute ago</string>
    <string name="today">today</string>
    <string name="more_than_a_month_ago">more than a month ago</string>
    <string name="in_a_minute">in less than a minute</string>
    <string name="in_a_month">in a month</string>
    <string name="tomorrow">tomorrow</string>
    <string name="in_number_days">in %d days</string>
    <string name="in_number_hours">in %d hours</string>
    <string name="in_number_minutes">in %d minutes</string>
    <string name="yesterday">yesterday</string>
    <string name="number_days_ago">%d days ago</string>
    <string name="number_hours_ago">%d hours ago</string>
    <string name="number_minutes_ago">%d minutes ago</string>
    <string name="choose_the_right_german_form">Choose the right german form</string>
    <string name="translate_this_text">Translate this text</string>
    <string name="group_the_items_together">Group the translation with the german version</string>
    <string name="learn_new_items">Learn new items</string>
    <string name="review_items">Review items</string>
    <string name="review_wrong_items">Review wrong items</string>
    <string name="learn_new_items_details">Learn new items(%d)</string>
    <string name="review_items_details">Review items(%d)</string>
    <string name="review_wrong_items_details">Review wrong items(%d)</string>
    <string name="review">Review</string>
    <string name="reset">Reset</string>
    <string name="review_items_per_session">Review items per session</string>
    <string name="learning_items_per_session">Learning items per session</string>
    <string name="wrong_items_per_session" >Wrong items per session</string>
    <string name="speech_to_text_label">Spell words</string>
    <string name="language">Language</string>
    <string name="imported">Imported</string>
    <string name="saved">Saved</string>
    <string name="sentences">Sentences</string>
    <string name="cancel">Cancel</string>
    <string name="add_example">Add example</string>
    <string name="edit_example">Edit example</string>
    <string name="original_sentence">Original sentence </string>
    <string name="new_sentence_translation">New sentence translation</string>
    <string name="original_word">Original word: %s</string>
    <string name="finish">Finish</string>
    <string name="form_the_sentence_from_words">Form the sentence from the existing words.</string>
    <string name="listening_words">Listening words</string>
    <string name="listen_items">Listen items</string>
    <string name="archive">Archive</string>
    <string name="items_selected">%d items selected</string>
    <string name="menu_main">Active Items</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_archive">Archived items</string>
    <string name="this_will_move_the_items_to_archive">The selected items will be archived. You can restore them later.</string>
    <string name="spell_translation">Spell translation</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="added_items">%d added items</string>
    <string-array name="review_items_per_session">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string-array name="learn_items_per_session">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="mistake_items_per_session">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Romanian</item>
    </string-array>
</resources>
