<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/menu_archive" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_app" />
            <item
                android:id="@+id/nav_contact_developer"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_developer" />
        </menu>
    </item>

</menu>
