<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_learn_new-words"
        android:orderInCategory="100"
        android:title="@string/learn_new_words"
        app:showAsAction="never" />
</menu>
