<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/exportButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/action_export"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/importButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/importButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <Switch
        android:id="@+id/spellWordsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/speech_to_text_label"
        app:layout_constraintBottom_toTopOf="@+id/reviewItemsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/reviewItemsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/review_items_per_session"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/learningItemsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/spellWordsSwitch" />

    <TextView
        android:id="@+id/learningItemsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/learning_items_per_session"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/wrongItemsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/reviewItemsLabel" />

    <TextView
        android:id="@+id/wrongItemsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/wrong_items_per_session"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/languageLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/learningItemsLabel" />

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/language"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/importButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/wrongItemsLabel" />

    <Button
        android:id="@+id/importButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/action_import"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toBottomOf="@+id/languageLabel"
        android:layout_marginLeft="8dp" />

    <Spinner
        android:id="@+id/reviewItemsSpinner"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:entries="@array/review_items_per_session"
        app:layout_constraintBottom_toBottomOf="@+id/reviewItemsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/reviewItemsLabel" />

    <Spinner
        android:id="@+id/learningItemsSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:entries="@array/learn_items_per_session"
        app:layout_constraintBottom_toBottomOf="@+id/learningItemsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/learningItemsLabel" />

    <Spinner
        android:id="@+id/wrongItemsSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:entries="@array/mistake_items_per_session"
        app:layout_constraintBottom_toBottomOf="@+id/wrongItemsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/wrongItemsLabel" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:entries="@array/languages"
        app:layout_constraintBottom_toBottomOf="@+id/languageLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/languageLabel" />

</android.support.constraint.ConstraintLayout>